Font-size fixes and nicer comments in vimrc

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -28,7 +28,7 @@ Main features of this setup:
 **Python/programming specific plugins:**
 
 - [neoclide/coc.nvim](https://github.com/neoclide/coc.nvim) as main driver for completions
-  - [neoclide/coc-python](https://github.com/neoclide/coc-python) as python language server\*
+  - [neoclide/coc-python](https://github.com/neoclide/coc-python) as python language server
   - [fannheyward/coc-pyright](https://github.com/fannheyward/coc-pyright) as fast python linter
 - [AndrewRadev/splitjoin.vim](https://github.com/AndrewRadev/splitjoin.vim) split function arguments etc.
 - [Vimjas/vim-python-pep8-indent](https://github.com/Vimjas/vim-python-pep8-indent) better indenting for python
@@ -57,7 +57,7 @@ Main features of this setup:
 - [wellle/targets.vim](https://github.com/wellle/targets.vim)  more text-objects
 - [tpope/vim-unimpaired](https://github.com/tpope/vim-unimpaired)  handy mapping [l ]l etc.
 
-_\* I actually use my own [coc-python](https://github.com/hanspinckaers/coc-python) fork with some speed hacks, but you be very cautious when using it, as I propably will not keep it up to date with the original repository._
+[comment]: # _\* I actually use my own [coc-python](https://github.com/hanspinckaers/coc-python) fork with some speed hacks, but you be very cautious when using it, as I propably will not keep it up to date with the original repository._
 
 On the bottom of this post you will find my full vimrc file and instructions how to install all the coc.nvim extensions.
 
@@ -109,27 +109,46 @@ FZF is a command-line fuzzy finder which I had to try before I really understood
 ```vimscript
 syntax on
 call plug#begin('~/.vim/plugged')
-Plug 'neoclide/coc.nvim', {'do': 'yarn  install --frozen-lockfile'}  " awesome languageserver support
-Plug 'junegunn/fzf', { 'dir': '~/.fzf', 'do': './install --all' }  " fuzzy find files/buffers etc.
+
+" awesome languageserver support
+Plug 'neoclide/coc.nvim', {'do': 'yarn  install --frozen-lockfile'}  
+" fuzzy find files/buffers etc.
+Plug 'junegunn/fzf', { 'dir': '~/.fzf', 'do': './install --all' }  
 Plug 'junegunn/fzf.vim'
-Plug 'jonathanfilip/vim-lucius'  " nice white colortheme
-Plug 'altercation/vim-colors-solarized'
-Plug 'wellle/targets.vim'  " more text-objects
-Plug 'tpope/vim-fugitive'  " git plugin
-Plug 'tpope/vim-commentary'  " comment-out by gc
-Plug 'tpope/vim-sleuth'  " auto shiftwidth
-Plug 'tpope/vim-unimpaired'  " handy mapping [l ]l etc.
-Plug 'cskeeters/vim-smooth-scroll'  " easier to follow scroll movements
-Plug 'junegunn/vim-peekaboo'  "show registers while pasting
-Plug 'majutsushi/tagbar'  " show tags in a bar (functions etc) for easy browsing
-Plug 'ludovicchabant/vim-gutentags'  " automatically create tags
-Plug 'tweekmonster/impsort.vim'  " color and sort imports
-Plug 'AndrewRadev/splitjoin.vim'  " split function arguments etc.
-Plug 'Vimjas/vim-python-pep8-indent'  " better indenting for python
-Plug 'romainl/vim-cool'  " auto nohl
+" nice white colortheme
+Plug 'jonathanfilip/vim-lucius'  
+" more text-objects
+Plug 'wellle/targets.vim'  
+" git plugin
+Plug 'tpope/vim-fugitive'  
+" comment-out by gc
+Plug 'tpope/vim-commentary'  
+" auto shiftwidth
+Plug 'tpope/vim-sleuth'  
+" handy mapping [l ]l etc.
+Plug 'tpope/vim-unimpaired'  
+" easier to follow scroll movements
+Plug 'cskeeters/vim-smooth-scroll'  
+"show registers while pasting
+Plug 'junegunn/vim-peekaboo'  
+" show tags in a bar (functions etc) for easy browsing
+Plug 'majutsushi/tagbar'  
+" automatically create tags
+Plug 'ludovicchabant/vim-gutentags'  
+" color and sort imports
+Plug 'tweekmonster/impsort.vim'  
+" split function arguments etc.
+Plug 'AndrewRadev/splitjoin.vim'  
+" better indenting for python
+Plug 'Vimjas/vim-python-pep8-indent'  
+" auto remove search highlight
+Plug 'romainl/vim-cool'  
+" sort of scrollbar indicator
 Plug 'drzel/vim-line-no-indicator'
-Plug 'tpope/vim-repeat'
+" easy add parantheses etc around text objects
 Plug 'tpope/vim-surround'
+" repeat certain plugin mappings
+Plug 'tpope/vim-repeat'
 call plug#end()
 
 " Change these to your python executables!
@@ -142,14 +161,17 @@ set relativenumber
 set number
 
 set ignorecase
-set wrapscan  " begin search from top of file when nothing is found anymore
+" begin search from top of file when nothing is found anymore
+set wrapscan  
 
 set expandtab
 set tabstop=4
-set fillchars+=vert:\  " remove chars from seperators
-set history=1000  " remember more commands and search histor
+" remove chars from seperators
+set fillchars+=vert:\  
+" remember more commands and search histor
+set history=1000  
 set nobackup
-set noswapfile  " swap files give errors
+set noswapfile
 set nofoldenable
 set breakindent
 
@@ -170,8 +192,9 @@ set shortmess+=c
 
 set undodir=~/.vim/undodir
 set undofile
-set undolevels=1000000  " maximum number of changes that can be undone
-set undoreload=1000000  " maximum number lines to save for undo on a buffer reload
+" maximum number of changes that can be undone
+set undolevels=1000000
+set undoreload=1000000
 
 set noshowmode
 set noshowcmd
@@ -204,7 +227,7 @@ map <C-t> :set nosplitright<CR>:TagbarToggle<CR>:set splitright<CR>
 set shortmess+=c
 
 " Use <space> as leader key
-let mapleader = " " " Leader is the space key
+let mapleader = " "
 let g:mapleader = " "
 let maplocalleader = "`"
 let g:maplocalleader = "`"
@@ -399,7 +422,6 @@ nnoremap <silent> <expr> $ ScreenMovement("$")
 """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" coc.nvim settings
 " if hidden is not set, TextEdit might fail.
 set hidden
-let g:coc_force_debug = 1 " make sure coc uses compiled code.
 
 " Some servers have issues with backup files, see #649
 set nowritebackup
